[package]
name = "filmaffinity-to-letterboxd"
version = "0.1.0"
edition = "2024"
authors = ["GabRodPul <103140108+GabRodPul@users.noreply.github.com>"]
description = "A simple webscraping tool to convert a FilmAffinity profile to Letterboxd's import format"
readme = "README.md"
homepage = "https://github.com/GabRodPul/filmaffinity-to-letterboxd"
repository = "https://github.com/GabRodPul/filmaffinity-to-letterboxd"
keywords = ["cli", "filmaffinity", "letterboxd", "webscraping", "chromedriver", "geckodriver"]
categories = ["command-line-utilities"]

[dependencies]
reqwest = "0.11.14"
scraper = "0.16.0"
select = "0.6.0"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
fantoccini = "0.22.0"
itertools = "0.14.0"
clap = { version = "4.5.54", features = ["derive"] }

[profile.release]
opt-level = 3
